# Alita

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
python/: pyproject.toml
python/agent_service/: __init__.py  action_graph.py  agent_run_state.py  agent_runtime_engine.py  agent_runtime_graph.py  app.py  asr.py  authority.py  capability_grants.py  context_manager.py  context_policy.py  eval_harness.py  execution.py  execution_graph.py  final_verifier.py  goal_spec.py  graph.py  graph_compiler.py  harness_errors.py  intent.py  kernel_state.py  mcp_client_factory.py  mcp_server.py  memory_store.py  model_client.py  model_policy.py  model_runtime.py  model_sessions.py  model_tool_adapter.py  node_output.py  permission_gate.py  plan_feedback.py  plan_validator.py  planner_chain.py  planner_v2.py  planning.py  privacy.py  prompt_templates.py  react_controller.py  replan.py  (+34 more)
python/evals/: model_loop_cases.jsonl  planner_cases.jsonl  research_cases.jsonl  router_cases.jsonl  security_cases.jsonl  tool_cases.jsonl
python/tests/: conftest.py  test_action_graph.py  test_agent_routing_integration.py  test_agent_run_state.py  test_agent_runtime_engine.py  test_agent_runtime_graph.py  test_app.py  test_asr.py  test_authority.py  test_context_manager.py  test_document_artifact_fixtures.py  test_document_tool.py  test_eval_harness.py  test_execution.py  test_execution_gateway_integration.py  test_execution_graph.py  test_final_verifier.py  test_flow_templates.py  test_goal_spec.py  test_graph.py  test_graph_compiler.py  test_intent.py  test_kernel_state.py  test_markitdown_tool.py  test_mcp_client_factory.py  test_mcp_server.py  test_mcp_tool_provider.py  test_memory_store.py  test_model_client.py  test_model_client_http_integration.py  test_model_policy.py  test_model_runtime.py  test_model_sessions.py  test_model_tool_adapter.py  test_package_metadata.py  test_permission_gate.py  test_plan_feedback.py  test_plan_validator.py  test_planner_chain.py  test_planner_v2.py  (+34 more)
python/tools/: document_tool.py  typst_tool.py  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+248 files in other folders)
